Adiciona fonte, metatags, pequenos ajustes na estilização do projeto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/imagens/capaEbook.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>28-Receitas</title>
+    <meta name="title" content="Ebook Receitas Saudáveis para Emagrecimento" />
+    <meta
+      name="description"
+      content="Adquira nosso ebook com 28 receitas saudáveis e dicas de emagrecimento para uma alimentação equilibrada. Perfecto para quem busca emagrecer com saúde."
+    />
+    <meta
+      name="keywords"
+      content="emagrecimento saudável, receitas saudáveis, emagrecimento, ebook de receitas, alimentação equilibrada, planejamento de refeições, dieta saudável"
+    />
+    <title>28-Receitas Saudáveis</title>
   </head>
   <body>
     <div id="root"></div>
